<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">肉肉新闻</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="news">新闻</string>
    <string name="js">军事</string>
    <string name="cj">财经</string>
    <string name="yl">娱乐</string>
    <string name="ty">体育</string>
    <string name="kj">科技</string>
    <string name="sh">社会</string>
    <string name="home_home">首页</string>
    <string name="home_love">喜爱</string>
    <string name="home_setting">设置</string>

</resources>